fix: h2 alignment on landing page

--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -1,6 +1,9 @@
 .landing {
   padding: 15px;
 }
+h2 {
+  text-align: center;
+}
 button {
   background-color: var(--light-blue);
   color: var(--background-color);
